Resolved the issue with talks overlapping and stacking on each other by adding clear left directive to CSS on the group titles. Tweaked all CSS sizes to allow 4 x n layout and tested. Resolved all JavaScript issues

--- a/website/static/website/css/talks.css
+++ b/website/static/website/css/talks.css
@@ -19,9 +19,14 @@
 	font-family: adelle-light;
 	font-size: 14px;
 	position:relative;
-	min-height: 170px;
-	width: 270px;
+	height: 300px;
+	width: 240px;
 	float: left;
+}
+
+.group-template {
+	width:100%;
+	clear:left;
 }
 
 .talk-template p {
@@ -32,7 +37,7 @@
 .talk-template img {
 	border: 1px solid #dddddd;
 	width:100%;
-	max-width: 270px;
+	max-width: 240px;
 	margin:auto;
 }
 
@@ -40,13 +45,13 @@
 	padding-bottom:20px; /* height of the downloads bar */
 	display:table-cell;
 	vertical-align: top;
-	width: 270px;
+	width: 240px;
 	position: relative;
 }
 
 .talk-thumbnail {
-	width: 270px;
-	min-width: 270px;
+	width: 240px;
+	min-width: 240px;
 	display:table-cell;
 	vertical-align: top;
 	padding-right:10px;
@@ -97,7 +102,6 @@
 .talk-download {
 	position: absolute;
 	font-size: 12px;
-	border-top: 1px solid #dddddd;
 	width:100%;
 	height: 20px;
 	bottom:0;
